--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>Marketplace</title>
@@ -2496,6 +2497,5 @@ By Lifeboat</p><span class="item-creator" style="display: none;">Lifeboat</span>
   }
 })();
 </script>
-<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script>
-<script>linkvertise(3046434, {whitelist: ["mir.cr", "gofile.io", "mirrored.to"], blacklist: []});</script></body>
+</body>
 </html>
