--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <html lang="en">
 <head>
-<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>Marketplace</title>
@@ -2497,5 +2496,5 @@ By Lifeboat</p><span class="item-creator" style="display: none;">Lifeboat</span>
   }
 })();
 </script>
-</body>
+<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script></body>
 </html>
