--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<head>
+<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script>
+</head>
 <!DOCTYPE html>
 
 <html lang="en">
 <head>
-<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script>  
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>Marketplace</title>
