--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <html lang="en">
 <head>
+<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script>  
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>Marketplace</title>
@@ -513,7 +514,6 @@
       .slider-prev, .slider-next { width: 32px; height: 32px; }
     }
   </style>
-</head>
 <body>
 <div class="stars" id="stars"></div>
 <header>
@@ -2501,3 +2501,4 @@ By Lifeboat</p><span class="item-creator" style="display: none;">Lifeboat</span>
 </script>
 <script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script></body>
 </html>
+</head>
