--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<head>
-<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script>
-</head>
 <!DOCTYPE html>
 
 <html lang="en">
@@ -514,6 +511,7 @@
       .slider-prev, .slider-next { width: 32px; height: 32px; }
     }
   </style>
+</head>
 <body>
 <div class="stars" id="stars"></div>
 <header>
@@ -2499,6 +2497,6 @@ By Lifeboat</p><span class="item-creator" style="display: none;">Lifeboat</span>
   }
 })();
 </script>
-<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665"></script></body>
+<script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1245665">
+</script></body>
 </html>
-</head>
